tests-integration/fixtures/checking/260_exhaustive_integer_partial/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
testPartialZero :: Int -> Int
testPartialOne :: Int -> Int
testWildcard :: Int -> Int

Types

Diagnostics
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: _
  --> 4:21..5:9
  |
4 | testPartialZero n = case n of
  |                     ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 3:1..3:30
  |
3 | testPartialZero :: Int -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: _
  --> 8:20..9:9
  |
8 | testPartialOne n = case n of
  |                    ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 7:1..7:29
  |
7 | testPartialOne :: Int -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
